fix: canvas scrollable on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,10 @@ body {
   }
 }
 
+.three-canvas {
+  touch-action: auto !important;
+}
+
 .reveal {
   animation-name: fadeIn;
   animation-duration: 500ms;
